fix: update parse-server dependency

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,128 +1,133 @@
-yarnPath: .yarn/releases/yarn-3.3.0.cjs
-nodeLinker: node-modules
-packageExtensions:
-  '@chakra-ui/react@2.x':
-    peerDependencies:
-      '@chakra-ui/styled-system': '2.x'
-  '@chakra-ui/toast@2.x':
-    peerDependencies:
-      '@chakra-ui/styled-system': '2.x'
-  '@firebase/analytics-compat@0.x':
-    peerDependencies:
-      '@firebase/app': '0.x'
-  '@firebase/auth-compat@0.x':
-    peerDependencies:
-      '@firebase/app': '0.x'
-      '@firebase/app-types': '0.x'
-  '@firebase/firestore-compat@0.x':
-    peerDependencies:
-      '@firebase/app': '0.x'
-      '@firebase/app-types': '0.x'
-  '@firebase/functions@0.x':
-    peerDependencies:
-      '@firebase/app-types': '0.x'
-  '@firebase/installations-compat@0.x':
-    peerDependencies:
-      '@firebase/app': '0.x'
-      '@firebase/app-types': '0.x'
-  '@firebase/messaging-compat@0.x':
-    peerDependencies:
-      '@firebase/app': '0.x'
-  '@firebase/remote-config-compat@0.x':
-    peerDependencies:
-      '@firebase/app': '0.x'
-  '@firebase/storage-compat@0.x':
-    peerDependencies:
-      '@firebase/app': '0.x'
-      '@firebase/app-types': '0.x'
-  '@firebase/app-check-compat@0.x':
-    peerDependencies:
-      '@firebase/app': '0.x'
-  '@firebase/database@0.x':
-    peerDependencies:
-      '@firebase/app-types': '0.x'
-  '@firebase/database-compat@0.x':
-    peerDependencies:
-      '@firebase/app-types': '0.x'
-  '@firebase/functions-compat@0.x':
-    peerDependencies:
-      '@firebase/app': '0.x'
-      '@firebase/app-types': '0.x'
-  '@firebase/performance-compat@0.x':
-    peerDependencies:
-      '@firebase/app': '0.x'
-  'firebase-admin@10.x':
-    peerDependencies:
-      '@firebase/app-types': '0.x'
-  'firebase-functions-rate-limiter@3.x':
-    peerDependencies:
-      '@firebase/app-types': '0.x'
-  'eslint-config-react-app@7.x':
-    peerDependencies:
-      '@babel/plugin-syntax-flow': '7.x'
-      '@babel/plugin-transform-react-jsx': '7.x'
-  'graphiql@1.x':
-    peerDependencies:
-      '@codemirror/language': '*'
-      '@codemirror/graphql-ws': '*'
-      'graphql-ws': '*'
-  '@chakra-ui/toast@3.x':
-    peerDependencies:
-      '@chakra-ui/styled-system': '*'
-  '@web3auth/base-plugin@2.x':
-    peerDependencies:
-      '@babel/runtime': '*'
-  'demo-express-proxy@*':
-    peerDependencies:
-      '@express': '*'
-  'react-scripts@5.x':
-    peerDependencies:
-      '@babel/plugin-syntax-flow': '*'
-      '@babel/plugin-transform-react-jsx': '*'
-  'eth-block-tracker@4.x':
-    peerDependencies:
-      '@babel/core': '*'
-      '@babel/plugin-transform-react-jsx': '*'
-  'oas-normalize@6.x':
-    peerDependencies:
-      'openapi-types': '*'
-  '@coinbase/wallet-sdk@3.x':
-    peerDependencies:
-      '@babel/core': '*'
-      '@babel/plugin-transform-react-jsx': '*'
-  'parse-dashboard@4.x':
-    peerDependencies:
-      '@codemirror/language': '*'
-      '@codemirror/graphql-ws': '*'
-      'graphql-ws': '*'
-  'rdme@7.x':
-    peerDependencies:
-      'openapi-types': '*'
-  'web3-provider-engine@16.x':
-    peerDependencies:
-      '@babel/core': '*'
-      '@babel/plugin-transform-react-jsx': '*'
-  '@walletconnect/web3-provider@1.x':
-    peerDependencies:
-      '@babel/core': '*'
-      '@babel/plugin-transform-react-jsx': '*'
-  'wagmi@0.x':
-    peerDependencies:
-      '@babel/core': '*'
-      '@babel/plugin-transform-react-jsx': '*'
-  'ts-node-dev@2.x':
-    peerDependencies:
-      '@types/node': '*'
-  'demo-nextjs@*':
-    peerDependencies:
-      '@babel-core': '*'
-  'demo-parse-server@*':
-    peerDependencies:
-      '@codemirror/graphql-ws': '*'
 logFilters:
-  # Need to fix and test (update react-moralis OR the demo)
-  - text: parse-server-react-client@workspace:demos/parse-server-migration-react-client provides react (pf8b55) with version 18.2.0, which doesn't satisfy what react-moralis and some of its descendants request
-    level: discard
-  # Wrong dependency in parse-server
-  - text: parse-server@npm:5.2.7 provides graphql (p7c971) with version 15.7.1, which doesn't satisfy what subscriptions-transport-ws requests
-    level: discard
+  - level: discard
+    text: "parse-server-react-client@workspace:demos/parse-server-migration-react-client provides react (pf8b55) with version 18.2.0, which doesn't satisfy what react-moralis and some of its descendants request"
+  - level: discard
+    text: "parse-server@npm:5.2.7 provides graphql (p7c971) with version 15.7.1, which doesn't satisfy what subscriptions-transport-ws requests"
+
+nodeLinker: node-modules
+
+packageExtensions:
+  "@chakra-ui/react@2.x":
+    peerDependencies:
+      "@chakra-ui/styled-system": 2.x
+  "@chakra-ui/toast@2.x":
+    peerDependencies:
+      "@chakra-ui/styled-system": 2.x
+  "@chakra-ui/toast@3.x":
+    peerDependencies:
+      "@chakra-ui/styled-system": "*"
+  "@coinbase/wallet-sdk@3.x":
+    peerDependencies:
+      "@babel/core": "*"
+      "@babel/plugin-transform-react-jsx": "*"
+  "@firebase/analytics-compat@0.x":
+    peerDependencies:
+      "@firebase/app": 0.x
+  "@firebase/app-check-compat@0.x":
+    peerDependencies:
+      "@firebase/app": 0.x
+  "@firebase/auth-compat@0.x":
+    peerDependencies:
+      "@firebase/app": 0.x
+      "@firebase/app-types": 0.x
+  "@firebase/database-compat@0.x":
+    peerDependencies:
+      "@firebase/app-types": 0.x
+  "@firebase/database@0.x":
+    peerDependencies:
+      "@firebase/app-types": 0.x
+  "@firebase/firestore-compat@0.x":
+    peerDependencies:
+      "@firebase/app": 0.x
+      "@firebase/app-types": 0.x
+  "@firebase/functions-compat@0.x":
+    peerDependencies:
+      "@firebase/app": 0.x
+      "@firebase/app-types": 0.x
+  "@firebase/functions@0.x":
+    peerDependencies:
+      "@firebase/app-types": 0.x
+  "@firebase/installations-compat@0.x":
+    peerDependencies:
+      "@firebase/app": 0.x
+      "@firebase/app-types": 0.x
+  "@firebase/messaging-compat@0.x":
+    peerDependencies:
+      "@firebase/app": 0.x
+  "@firebase/performance-compat@0.x":
+    peerDependencies:
+      "@firebase/app": 0.x
+  "@firebase/remote-config-compat@0.x":
+    peerDependencies:
+      "@firebase/app": 0.x
+  "@firebase/storage-compat@0.x":
+    peerDependencies:
+      "@firebase/app": 0.x
+      "@firebase/app-types": 0.x
+  "@walletconnect/web3-provider@1.x":
+    peerDependencies:
+      "@babel/core": "*"
+      "@babel/plugin-transform-react-jsx": "*"
+  "@web3auth/base-plugin@2.x":
+    peerDependencies:
+      "@babel/runtime": "*"
+  demo-express-proxy@*:
+    peerDependencies:
+      "@express": "*"
+  demo-nextjs@*:
+    peerDependencies:
+      "@babel-core": "*"
+  demo-parse-server@*:
+    peerDependencies:
+      "@codemirror/graphql-ws": "*"
+  eslint-config-react-app@7.x:
+    peerDependencies:
+      "@babel/plugin-syntax-flow": 7.x
+      "@babel/plugin-transform-react-jsx": 7.x
+  eth-block-tracker@4.x:
+    peerDependencies:
+      "@babel/core": "*"
+      "@babel/plugin-transform-react-jsx": "*"
+  firebase-admin@10.x:
+    peerDependencies:
+      "@firebase/app-types": 0.x
+  firebase-functions-rate-limiter@3.x:
+    peerDependencies:
+      "@firebase/app-types": 0.x
+  graphiql@1.x:
+    peerDependencies:
+      "@codemirror/graphql-ws": "*"
+      "@codemirror/language": "*"
+      graphql-ws: "*"
+  oas-normalize@6.x:
+    peerDependencies:
+      openapi-types: "*"
+  parse-dashboard@4.x:
+    peerDependencies:
+      "@codemirror/graphql-ws": "*"
+      "@codemirror/language": "*"
+      graphql-ws: "*"
+  rdme@7.x:
+    peerDependencies:
+      openapi-types: "*"
+  react-scripts@5.x:
+    peerDependencies:
+      "@babel/plugin-syntax-flow": "*"
+      "@babel/plugin-transform-react-jsx": "*"
+  ts-node-dev@2.x:
+    peerDependencies:
+      "@types/node": "*"
+  wagmi@0.x:
+    peerDependencies:
+      "@babel/core": "*"
+      "@babel/plugin-transform-react-jsx": "*"
+  web3-provider-engine@16.x:
+    peerDependencies:
+      "@babel/core": "*"
+      "@babel/plugin-transform-react-jsx": "*"
+
+plugins:
+  - path: .yarn/plugins/@yarnpkg/plugin-interactive-tools.cjs
+    spec: "@yarnpkg/plugin-interactive-tools"
+
+yarnPath: .yarn/releases/yarn-3.3.0.cjs
