--- a/demos/parse-server-migration/package.json
+++ b/demos/parse-server-migration/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@moralisweb3/eslint-config": "^1.0.1",
     "@types/cors": "^2.8.13",
+    "@types/jest": "^29.2.5",
     "@types/node": "^18.11.11",
     "@typescript-eslint/eslint-plugin": "^5.45.1",
     "@typescript-eslint/parser": "^5.45.1",
@@ -28,8 +29,10 @@
     "eslint": "^8.29.0",
     "eslint-plugin-etc": "^2.0.2",
     "eslint-plugin-import": "^2.26.0",
+    "jest": "^29.3.1",
     "mongodb-runner": "^4.9.0",
     "prettier": "^2.8.0",
+    "ts-jest": "^29.0.4",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3"
   },
