--- a/demos/webpack/package.json
+++ b/demos/webpack/package.json
@@ -12,6 +12,7 @@
     "@moralisweb3/client": "^2.11.0",
     "@moralisweb3/client-connector-magic-link": "^2.11.0",
     "@moralisweb3/client-connector-wallet-connect": "^2.11.0",
+    "crypto-browserify": "^3.12.0",
     "dotenv": "^16.0.3"
   },
   "devDependencies": {
