--- a/packages/express/package.json
+++ b/packages/express/package.json
@@ -20,6 +20,7 @@
     "@moralisweb3/api-utils": "^2.11.0",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
-    "moralis": "^2.11.0"
+    "moralis": "^2.11.0",
+    "ms": "^2.1.3"
   }
 }
