--- a/demos/webpack/package.json
+++ b/demos/webpack/package.json
@@ -9,9 +9,12 @@
     "serve": "http-server ./ -p 7777"
   },
   "dependencies": {
+    "@ethersproject/providers": "^5.7.2",
     "@moralisweb3/client": "^2.11.0",
     "@moralisweb3/client-connector-magic-link": "^2.11.0",
     "@moralisweb3/client-connector-wallet-connect": "^2.11.0",
+    "@walletconnect/types": "1.8.0",
+    "@walletconnect/web3-provider": "^1.8.0",
     "dotenv": "^16.0.3"
   },
   "devDependencies": {
