--- a/demos/webpack/package.json
+++ b/demos/webpack/package.json
@@ -15,7 +15,8 @@
     "@moralisweb3/client-connector-wallet-connect": "^2.11.0",
     "@walletconnect/types": "1.8.0",
     "@walletconnect/web3-provider": "^1.8.0",
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "eip1193-provider": "^1.0.1"
   },
   "devDependencies": {
     "http-server": "^14.1.1",
