--- a/packages/client/connector/eip1193/package.json
+++ b/packages/client/connector/eip1193/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@babel/core": "^7.20.5",
     "@babel/plugin-transform-react-jsx": "^7.19.0",
-    "@moralisweb3/client-evm-auth": "^2.11.0"
+    "@moralisweb3/client-evm-auth": "^2.11.0",
+    "eip1193-provider": "^1.0.1"
   }
 }
