fix: update typescript and node types dependencies

--- a/packages/eslintConfig/package.json
+++ b/packages/eslintConfig/package.json
@@ -21,7 +21,6 @@
     "@typescript-eslint/eslint-plugin": "^5.48.2",
     "@typescript-eslint/parser": "^5.48.2",
     "eslint-plugin-etc": "^2.0.2",
-    "eslint-plugin-import": "^2.26.0",
-    "typescript": "^4.9.3"
+    "eslint-plugin-import": "^2.26.0"
   }
 }
