--- a/demos/nextjs/package.json
+++ b/demos/nextjs/package.json
@@ -24,7 +24,7 @@
     "@babel/plugin-transform-react-jsx": "^7.19.0",
     "@moralisweb3/eslint-config": "^1.0.1",
     "@next/eslint-plugin-next": "^12.2.5",
-    "@types/node": "18.11.11",
+    "@types/node": "^18.11.18",
     "@types/react": "^18.0.18",
     "@types/react-dom": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.48.2",
@@ -32,6 +32,6 @@
     "eslint": "^8.22.0",
     "eslint-config-next": "12.2.3",
     "eslint-plugin-etc": "^2.0.2",
-    "typescript": "4.9.3"
+    "typescript": "^4.9.4"
   }
 }
