--- a/packages/apiUtils/package.json
+++ b/packages/apiUtils/package.json
@@ -26,8 +26,7 @@
   },
   "devDependencies": {
     "@moralisweb3/common-evm-utils": "^2.11.1",
-    "jest": "29.3.1",
-    "typescript": "^4.9.3"
+    "jest": "29.3.1"
   },
   "dependencies": {
     "@moralisweb3/common-core": "^2.11.1",
