--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -26,8 +26,7 @@
   },
   "devDependencies": {
     "jest": "29.3.1",
-    "openapi-typescript": "^5.2.0",
-    "typescript": "^4.9.3"
+    "openapi-typescript": "^5.2.0"
   },
   "dependencies": {
     "@moralisweb3/api-utils": "^2.11.1",
