--- a/packages/common/evmUtils/package.json
+++ b/packages/common/evmUtils/package.json
@@ -29,8 +29,7 @@
     "@moralisweb3/eslint-config": "^1.0.1",
     "eslint": "^8.29.0",
     "jest": "29.3.1",
-    "openapi-typescript": "^5.2.0",
-    "typescript": "^4.9.3"
+    "openapi-typescript": "^5.2.0"
   },
   "dependencies": {
     "@ethersproject/address": "^5.7.0",
