--- a/packages/common/solUtils/package.json
+++ b/packages/common/solUtils/package.json
@@ -28,8 +28,7 @@
     "@moralisweb3/eslint-config": "^1.0.1",
     "eslint": "^8.29.0",
     "jest": "29.3.1",
-    "openapi-typescript": "^5.2.0",
-    "typescript": "^4.9.3"
+    "openapi-typescript": "^5.2.0"
   },
   "dependencies": {
     "@moralisweb3/common-core": "^2.11.1",
