--- a/packages/parseServer/package.json
+++ b/packages/parseServer/package.json
@@ -23,8 +23,7 @@
   },
   "devDependencies": {
     "@types/express": "4.17.14",
-    "@types/parse": "^2.18.18",
-    "typescript": "^4.9.3"
+    "@types/parse": "^2.18.18"
   },
   "dependencies": {
     "@moralisweb3/api-utils": "^2.11.1",
