--- a/packages/streams/package.json
+++ b/packages/streams/package.json
@@ -28,8 +28,7 @@
     "@moralisweb3/test-utils": "2.11.1",
     "@types/ethereumjs-util": "5.2.0",
     "jest": "29.3.1",
-    "openapi-typescript": "^5.2.0",
-    "typescript": "^4.9.3"
+    "openapi-typescript": "^5.2.0"
   },
   "dependencies": {
     "@ethersproject/abi": "^5.7.0",
