--- a/packages/testUtils/package.json
+++ b/packages/testUtils/package.json
@@ -21,8 +21,7 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.186",
-    "lodash": "^4.17.21",
-    "typescript": "^4.9.3"
+    "lodash": "^4.17.21"
   },
   "dependencies": {
     "msw": "0.49.1"
