--- a/demos/nextjs/package.json
+++ b/demos/nextjs/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@moralisweb3/next": "^2.11.1",
     "axios": "^1.2.1",
-    "ethers": "5.6.9",
+    "ethers": "^5.7.2",
     "moralis": "^2.11.1",
     "next": "12.2.5",
     "next-auth": "4.16.4",
