--- a/demos/express-fullstack-server/.env.example
+++ b/demos/express-fullstack-server/.env.example
@@ -2,5 +2,7 @@ PORT = 4000;
 
 # Your Moralis Api key, that can be found in the dashboard. Keep this secret!
 MORALIS_API_KEY = ''
+
 # Token secret is used for JWT session generating
+# Linux: `openssl rand -hex 32` or go to https://generate-secret.now.sh/32
 TOKEN_SECRET = ''
