--- a/packages/common/core/package.json
+++ b/packages/common/core/package.json
@@ -31,8 +31,6 @@
     "msw": "0.49.1"
   },
   "dependencies": {
-    "axios": "^1.2.1",
-    "eventemitter3": "^4.0.7",
-    "typed-emitter": "^2.1.0"
+    "axios": "^1.2.1"
   }
 }
