--- a/packages/moralis/package.json
+++ b/packages/moralis/package.json
@@ -39,11 +39,18 @@
   "scripts": {
     "lint": "eslint . --ext .js,.ts,.tsx,jsx",
     "clean": "rm -rf lib && rm -rf tsconfig.tsbuildinfo && rm -rf tsconfig.build.tsbuildinfo && rm -rf ./node_modules/.cache/nx",
-    "build": "tsc",
+    "build": "yarn build:cjs && yarn build:esm && yarn build-dist",
+    "build:esm": "tsc --project tsconfig.esm.json",
+    "build:cjs": "tsc --project tsconfig.json",
+    "build-dist": "rollup -c",
     "dev": "tsc --watch"
   },
   "exports": {
-    ".": "./lib/index.js",
+    ".": {
+      "import": "./lib.esm/index.js",
+      "require": "./lib/index.js",
+      "types": "./lib/index.d.ts"
+    },
     "./common-core": "./lib/commonCore/index.js",
     "./streams-typings": "./lib/streamsTypings/index.js",
     "./common-evm-utils": "./lib/commonEvmUtils/index.js",
@@ -93,5 +100,16 @@
     "@moralisweb3/sol-api": "^2.11.1",
     "@moralisweb3/streams": "^2.11.1",
     "@moralisweb3/streams-typings": "^1.0.6"
+  },
+  "devDependencies": {
+    "@rollup/plugin-commonjs": "^24.0.1",
+    "@rollup/plugin-json": "^6.0.0",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-terser": "^0.3.0",
+    "rollup": "^3.10.1",
+    "rollup-plugin-cleaner": "^1.0.0",
+    "rollup-plugin-node-globals": "^1.4.0",
+    "rollup-plugin-node-polyfills": "^0.2.1",
+    "rollup-plugin-peer-deps-external": "^2.2.4"
   }
 }
