--- a/packages/apiGenerator/package.json
+++ b/packages/apiGenerator/package.json
@@ -2,10 +2,14 @@
   "name": "@moralisweb3/api-generator",
   "private": true,
   "scripts": {
-    "generate": "ts-node src/index.ts"
+    "generate": "ts-node src/index.ts",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "devDependencies": {
+    "@types/jest": "^29.2.6",
     "axios": "^1.2.2",
+    "jest": "29.3.1",
     "openapi-types": "^12.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
