improved generated types.

--- a/packages/common/aptUtils/tsconfig.json
+++ b/packages/common/aptUtils/tsconfig.json
@@ -1,5 +1,7 @@
 {
   "extends": "../../../tsconfig.package.json",
-  "compilerOptions": {},
+  "compilerOptions": {
+    "noUnusedLocals": false
+  },
   "include": ["src/**/*", "types/**/*", "integration/**/*"]
 }
