--- a/demos/react-demo-moralis/package.json
+++ b/demos/react-demo-moralis/package.json
@@ -3,12 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/react": "^2.3.1",
+    "@chakra-ui/styled-system": "^2.3.1",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
     "@moralisweb3/react": "^2.11.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "typescript": "^4.9.4",
-    "web-vitals": "^2.1.4"
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "5.0.1"
   },
   "scripts": {
     "start": "cross-env SKIP_PREFLIGHT_CHECK=true GENERATE_SOURCEMAP=false react-app-rewired start",
@@ -34,6 +37,8 @@
     ]
   },
   "devDependencies": {
+    "typescript": "^4.9.4",
+    "web-vitals": "^2.1.4",
     "@types/node": "^16.18.11",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
