--- a/demos/react/public/manifest.json
+++ b/demos/react/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "React + Moralis App",
-  "name": "Create React App Sample",
+  "name": "React + Moralis Example App",
   "icons": [
     {
       "src": "favicon.ico",
