--- a/packages/aptApi/package.json
+++ b/packages/aptApi/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@moralisweb3/common-apt-utils",
+  "name": "@moralisweb3/apt-api",
   "author": "Moralis",
   "version": "2.11.1",
   "license": "MIT",
@@ -7,10 +7,10 @@
   "types": "./lib/index.d.ts",
   "sideEffects": false,
   "moralis": {
-    "name": "Aptos utilities",
-    "type": "utils",
-    "scope": "common",
-    "description": "Utilities, operations, datatypes and types related to Aptos network"
+    "name": "Aptos Api",
+    "type": "feature",
+    "scope": "server",
+    "description": "Make calls to the Aptos blockchain via Moralis Aptos Apis"
   },
   "files": [
     "lib/*"
@@ -25,12 +25,12 @@
     "dev": "tsc --watch"
   },
   "devDependencies": {
-    "@moralisweb3/eslint-config": "^1.0.1",
-    "eslint": "^8.29.0",
     "jest": "29.3.1",
+    "openapi-typescript": "^5.2.0",
     "typescript": "^4.9.3"
   },
   "dependencies": {
+    "@moralisweb3/api-utils": "^2.11.1",
     "@moralisweb3/common-core": "^2.11.1"
   }
 }
