refactor, checking for uniqueness, tests, renamed apt to aptos, advanced mapping.

--- a/packages/apiGenerator/package.json
+++ b/packages/apiGenerator/package.json
@@ -2,7 +2,7 @@
   "name": "@moralisweb3/api-generator",
   "private": true,
   "scripts": {
-    "gen:apt": "ts-node src/index.ts ../../aptApi/src/generated",
+    "gen:aptos": "ts-node src/index.ts ../../aptosApi/src/generated",
     "test": "jest",
     "test:watch": "jest --watch"
   },
