--- a/packages/aptosApi/package.json
+++ b/packages/aptosApi/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@moralisweb3/apt-api",
+  "name": "@moralisweb3/aptos-api",
   "author": "Moralis",
   "version": "2.11.1",
   "license": "MIT",
