--- a/packages/client/firebaseEvmAuth/package.json
+++ b/packages/client/firebaseEvmAuth/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@moralisweb3/client-firebase-evm-auth",
   "author": "Moralis",
-  "version": "2.12.0",
+  "version": "2.11.1",
   "license": "MIT",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
@@ -16,9 +16,9 @@
     "dev": "tsc --watch"
   },
   "dependencies": {
+    "@ethersproject/providers": "^5.7.2",
     "@metamask/detect-provider": "^1.2.0",
-    "@moralisweb3/client-firebase-auth-utils": "^2.12.0",
-    "ethers": "^5.7.2",
+    "@moralisweb3/client-firebase-auth-utils": "^2.11.1",
     "firebase": "^9.15.0"
   }
 }
