--- a/packages/common/aptosUtils/package.json
+++ b/packages/common/aptosUtils/package.json
@@ -31,6 +31,6 @@
   },
   "dependencies": {
     "@moralisweb3/common-core": "^2.12.0",
-    "aptos": "^1.6.0"
+    "@noble/hashes": "^1.2.0"
   }
 }
