--- a/packages/common/authUtils/package.json
+++ b/packages/common/authUtils/package.json
@@ -31,10 +31,10 @@
     "openapi-typescript": "^5.2.0"
   },
   "dependencies": {
+    "@ethersproject/abi": "^5.7.0",
     "@moralisweb3/common-core": "^2.12.0",
     "@moralisweb3/common-evm-utils": "^2.12.0",
     "@moralisweb3/common-sol-utils": "^2.12.0",
-    "@moralisweb3/streams-typings": "^1.0.6",
-    "ethers": "^5.7.0"
+    "@moralisweb3/streams-typings": "^1.0.6"
   }
 }
