--- a/packages/common/evmUtils/package.json
+++ b/packages/common/evmUtils/package.json
@@ -31,7 +31,9 @@
     "openapi-typescript": "^5.2.0"
   },
   "dependencies": {
-    "@moralisweb3/common-core": "^2.12.0",
-    "ethers": "^5.7.0"
+    "@ethersproject/address": "^5.7.0",
+    "@ethersproject/bytes": "^5.7.0",
+    "@ethersproject/transactions": "^5.7.0",
+    "@moralisweb3/common-core": "^2.12.0"
   }
 }
