--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "@moralisweb3/api-utils": "^2.12.0",
+    "@moralisweb3/common-aptos-utils": "workspace:^",
     "@moralisweb3/common-auth-utils": "^2.12.0",
     "@moralisweb3/common-core": "^2.12.0",
     "@moralisweb3/common-evm-utils": "^2.12.0",
