--- a/packages/create-moralis-dapp/next/tsconfig.json
+++ b/packages/create-moralis-dapp/next/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "../../tsconfig.package.json",
+  "extends": "../../../tsconfig.package.json",
   "compilerOptions": {
     "outDir": "./lib",
     "declarationDir": "./lib/",
