--- a/packages/create-moralis-dapp/toolkit/package.json
+++ b/packages/create-moralis-dapp/toolkit/package.json
@@ -20,19 +20,16 @@
     "copy-files": "copyfiles -u 1 -a src/generators/*/template/** lib",
     "dev": "ts-node-dev src/index.ts"
   },
-  "dependencies": {
+  "devDependencies": {
+    "@types/ejs": "3.1.1",
     "axios": "^1.2.1",
     "chalk": "^5.0.1",
     "copyfiles": "2.4.1",
     "ejs": "^3.1.8",
-    "fs-extra": "^11.0.1",
+    "fs-extra": "^10.1.0",
     "inquirer": "^8.0.0",
     "lodash": "^4.17.21",
-    "ora": "^5.4.1"
-  },
-  "devDependencies": {
-    "@types/ejs": "3.1.1",
-    "@types/fs-extra": "^11.0.1",
+    "ora": "^5.4.1",
     "ts-node-dev": "^2.0.0"
   }
 }
