--- a/packages/create-moralis-dapp/toolkit/tsconfig.json
+++ b/packages/create-moralis-dapp/toolkit/tsconfig.json
@@ -1,17 +1,11 @@
 {
-  "extends": "../../tsconfig.package.json",
+  "extends": "../../../tsconfig.package.json",
   "compilerOptions": {
     "outDir": "./lib",
     "declarationDir": "./lib/",
     "rootDir": "./src",
-    "resolveJsonModule": true,
-    "allowSyntheticDefaultImports": true,
+    "resolveJsonModule": true
   },
-  "include": [
-    "src/**/*",
-    "types/**/*"
-  ],
-  "exclude": [
-    "src/generators/**/template/**"
-  ]
+  "include": ["src/**/*", "types/**/*"],
+  "exclude": ["src/generators/**/template/**"]
 }
