--- a/packages/common/solUtils/package.json
+++ b/packages/common/solUtils/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "@moralisweb3/common-core": "^2.12.0",
     "bn.js": "^5.2.1",
-    "bs58": "^5.0.0"
+    "bs58": "^5.0.0",
+    "buffer": "^6.0.3"
   }
 }
