--- a/packages/create-moralis-dapp/create-moralis-dapp/package.json
+++ b/packages/create-moralis-dapp/create-moralis-dapp/package.json
@@ -21,6 +21,9 @@
     "dev": "ts-node-dev src/index.ts"
   },
   "devDependencies": {
+    "@create-moralis-dapp/express": "^2.13.0",
+    "@create-moralis-dapp/next": "^2.13.0",
+    "@create-moralis-dapp/toolkit": "^2.13.0",
     "@types/ejs": "3.1.1",
     "axios": "^1.2.1",
     "chalk": "^5.0.1",
@@ -29,7 +32,7 @@
     "fs-extra": "^10.1.0",
     "inquirer": "^8.0.0",
     "lodash": "^4.17.21",
-    "ora": "^5.4.1",
+    "ora": "^6.1.2",
     "ts-node-dev": "^2.0.0"
   }
 }
