--- a/packages/create-moralis-dapp/express/tsconfig.json
+++ b/packages/create-moralis-dapp/express/tsconfig.json
@@ -1,11 +1,15 @@
 {
-  "extends": "../../tsconfig.package.json",
+  "extends": "../../../tsconfig.package.json",
   "compilerOptions": {
     "outDir": "./lib",
     "declarationDir": "./lib/",
     "rootDir": "./src",
     "resolveJsonModule": true
   },
-  "include": ["src/**/*", "types/**/*"],
-  "exclude": ["src/generators/**/template/**"]
+  "include": [
+    "src/**/*",
+  ],
+  "exclude": [
+    "src/template/**"
+  ]
 }
