--- a/packages/create-moralis-dapp/next/tsconfig.json
+++ b/packages/create-moralis-dapp/next/tsconfig.json
@@ -6,6 +6,10 @@
     "rootDir": "./src",
     "resolveJsonModule": true
   },
-  "include": ["src/**/*", "types/**/*"],
-  "exclude": ["src/generators/**/template/**"]
+  "include": [
+    "src/**/*",
+  ],
+  "exclude": [
+    "src/template/**"
+  ]
 }
