--- a/demos/react-vite/package.json
+++ b/demos/react-vite/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@moralisweb3/react": "^2.11.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
