firebase deploy fix.

--- a/demos/firebase-auth-ext/firebase.json
+++ b/demos/firebase-auth-ext/firebase.json
@@ -2,20 +2,12 @@
   "functions": {
     "ignore": ["node_modules"],
     "source": "functions",
-    "predeploy": [
-      "yarn --cwd \"$RESOURCE_DIR\" install",
-      "yarn --cwd \"$RESOURCE_DIR\" run lint",
-      "yarn --cwd \"$RESOURCE_DIR\" run build"
-    ]
+    "predeploy": ["cd functions && yarn install && yarn run build"]
   },
   "hosting": {
     "ignore": ["node_modules"],
     "public": "hosting/build",
-    "predeploy": [
-      "yarn --cwd \"$RESOURCE_DIR\" install",
-      "yarn --cwd \"$RESOURCE_DIR\" run lint",
-      "yarn --cwd \"$RESOURCE_DIR\" run build"
-    ]
+    "predeploy": ["cd hosting && yarn install && yarn run build"]
   },
   "emulators": {
     "hosting": {
