--- a/demos/firebase-streams-monitor/firebase.json
+++ b/demos/firebase-streams-monitor/firebase.json
@@ -5,7 +5,7 @@
   },
   "functions": {
     "ignore": ["node_modules", ".git", "firebase-debug.log", "firebase-debug.*.log"],
-    "predeploy": ["npm --prefix \"$RESOURCE_DIR\" run lint", "npm --prefix \"$RESOURCE_DIR\" run build"]
+    "predeploy": ["cd functions && yarn install && yarn run build"]
   },
   "emulators": {
     "functions": {
