--- a/demos/firebase-proxy/firebase.json
+++ b/demos/firebase-proxy/firebase.json
@@ -4,11 +4,7 @@
     "indexes": "firestore.indexes.json"
   },
   "functions": {
-    "predeploy": [
-      "yarn --cwd \"$RESOURCE_DIR\" install",
-      "yarn --cwd \"$RESOURCE_DIR\" run lint",
-      "yarn --cwd \"$RESOURCE_DIR\" run build"
-    ]
+    "predeploy": ["cd functions && yarn install && yarn run build"]
   },
   "hosting": {
     "public": "./hosting"
