fix: better public .env variables

--- a/demos/client-webpack/.env.example
+++ b/demos/client-webpack/.env.example
@@ -1,3 +1,4 @@
-# Note: this API key is publicly visible in your app, make sure to set
-# correct access rights in the admin panel
-MORALIS_API_KEY=''
+# Any variables that start with PUBLIC_ will be availalbe in the browser
+
+# This API key is publicly visible in your app, make sure to set correct access rights in the admin panel
+PUBLIC_MORALIS_API_KEY=''
