added missing dependencies.

--- a/packages/aptosApi/package.json
+++ b/packages/aptosApi/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@moralisweb3/aptos-api",
   "author": "Moralis",
-  "version": "2.11.1",
+  "version": "2.14.1",
   "license": "MIT",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "@moralisweb3/api-utils": "^2.11.1",
+    "@moralisweb3/common-aptos-utils": "^2.11.1",
     "@moralisweb3/common-core": "^2.11.1"
   }
 }
