feat: added react-cra to cmd

--- a/packages/create-moralis-dapp/react-cra/tsconfig.json
+++ b/packages/create-moralis-dapp/react-cra/tsconfig.json
@@ -4,12 +4,12 @@
     "outDir": "./lib",
     "declarationDir": "./lib/",
     "rootDir": "./src",
-    "resolveJsonModule": true,
+    "resolveJsonModule": true
   },
   "include": [
     "src/**/*",
   ],
   "exclude": [
     "src/template/**"
-  ],
+  ]
 }
