--- a/packages/create-moralis-dapp/create-moralis-dapp/.gitignore
+++ b/packages/create-moralis-dapp/create-moralis-dapp/.gitignore
@@ -1,9 +1,9 @@
 # Ignore everything to save us from pushing created apps during dev tests:
-*
+/*
 
 # Except for the themes directories:
 
-!./src/**
+!src/
 !.eslintrc.js
 !.gitignore
 !CHANGELOG.md
