--- a/packages/create-moralis-dapp/express/tsconfig.json
+++ b/packages/create-moralis-dapp/express/tsconfig.json
@@ -6,10 +6,6 @@
     "rootDir": "./src",
     "resolveJsonModule": true
   },
-  "include": [
-    "src/**/*",
-  ],
-  "exclude": [
-    "src/template/**"
-  ]
+  "include": ["src/**/*"],
+  "exclude": ["src/template/**"]
 }
