--- a/packages/create-moralis-dapp/toolkit/package.json
+++ b/packages/create-moralis-dapp/toolkit/package.json
@@ -15,18 +15,15 @@
     "lint": "eslint . --ext .js,.ts,.tsx,jsx",
     "format": "prettier --write 'src/**/*.{js,ts}'",
     "clean": "rm -rf lib && rm -rf tsconfig.tsbuildinfo && rm -rf ./node_modules/.cache/nx",
-    "build": "tsc",
-    "dev": "ts-node-dev src/index.ts"
+    "build": "tsc"
   },
-  "devDependencies": {
-    "@types/ejs": "3.1.1",
-    "chalk": "^5.0.1",
-    "copyfiles": "2.4.1",
-    "ejs": "^3.1.8",
+  "dependencies": {
     "fs-extra": "^10.1.0",
     "inquirer": "^8.0.0",
-    "lodash": "^4.17.21",
     "ora": "^5.4.1",
-    "ts-node-dev": "^2.0.0"
+    "ejs": "^3.1.8"
+  },
+  "devDependencies": {
+    "@types/ejs": "3.1.1"
   }
 }
