--- a/packages/create-moralis-dapp/create-moralis-dapp/package.json
+++ b/packages/create-moralis-dapp/create-moralis-dapp/package.json
@@ -19,9 +19,9 @@
     "dev": "ts-node src/index.ts"
   },
   "dependencies": {
-    "inquirer": "^8.0.0",
     "@create-moralis-dapp/express": "^2.13.0",
     "@create-moralis-dapp/next": "^2.13.0",
-    "@create-moralis-dapp/toolkit": "^2.13.0"
+    "@create-moralis-dapp/toolkit": "^2.13.0",
+    "inquirer": "^8.0.0"
   }
 }
