--- a/packages/create-moralis-dapp/next/package.json
+++ b/packages/create-moralis-dapp/next/package.json
@@ -22,5 +22,8 @@
   },
   "dependencies": {
     "@create-moralis-dapp/toolkit": "^2.13.0"
+  },
+  "devDependencies": {
+    "copyfiles": "^2.4.1"
   }
 }
