feat: added test cmd

--- a/packages/create-moralis-dapp/express/tsconfig.json
+++ b/packages/create-moralis-dapp/express/tsconfig.json
@@ -7,5 +7,5 @@
     "resolveJsonModule": true
   },
   "include": ["src/**/*"],
-  "exclude": ["src/template/**"]
+  "exclude": ["src/template/**", "src/**/*.test.ts"]
 }
