support for anyOf unions (simple types for now), refactor.

--- a/packages/apiGenerator/package.json
+++ b/packages/apiGenerator/package.json
@@ -2,7 +2,8 @@
   "name": "@moralisweb3/api-generator",
   "private": true,
   "scripts": {
-    "gen:aptos": "ts-node src/index.ts ../../common/aptosUtils/src/generated",
+    "gen:aptos": "ts-node src/index.ts ../../common/aptosUtils",
+    "gen:playground": "ts-node src/index.ts ../playground",
     "test": "jest",
     "test:watch": "jest --watch"
   },
