--- a/packages/common/aptosUtils/package.json
+++ b/packages/common/aptosUtils/package.json
@@ -21,7 +21,7 @@
     "test:watch": "yarn run test --watch",
     "lint": "eslint . --ext .js,.ts,.tsx,jsx",
     "clean": "rm -rf lib && rm -rf tsconfig.tsbuildinfo && rm -rf tsconfig.build.tsbuildinfo && rm -rf ./node_modules/.cache/nx",
-    "build": "tsc -p tsconfig.build.json",
+    "build": "yarn run -T tsc -p tsconfig.build.json",
     "dev": "tsc --watch"
   },
   "devDependencies": {
