--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@typescript-eslint/parser": "^5.48.2",
     "archiver": "^5.3.1",
     "cross-env": "^7.0.3",
+    "cypress": "^12.6.0",
     "eslint": "^8.32.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jest": "^27.2.1",
