feat: added e2e tests for UMD demo

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "openapi-types": "^12.0.0",
     "prettier": "^2.8.0",
     "rdme": "^7.5.0",
+    "start-server-and-test": "^1.15.4",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "typedoc": "^0.23.21",
@@ -47,7 +48,7 @@
     "test": "yarn nx run-many --target=test --all",
     "test:watch": "yarn nx run-many --target=test:watch --all",
     "test:coverage": "yarn nx run-many --target=test:coverage --all",
-    "test:demos": "yarn nx run-many --target=test --projects=react-demo",
+    "test:demos": "yarn nx run-many --target=test:ci --projects=react-demo,client-umd-e2e",
     "format": "yarn prettier . \"**/*.+(js|ts|json)\" --write",
     "format:check": "yarn prettier . \"**/*.+(js|ts|json)\" --check",
     "release": "yarn build && changeset publish",
