--- a/demos/react/package.json
+++ b/demos/react/package.json
@@ -14,8 +14,9 @@
     "react-scripts": "5.0.1"
   },
   "scripts": {
-    "start": "cross-env SKIP_PREFLIGHT_CHECK=true GENERATE_SOURCEMAP=false react-app-rewired start",
+    "start": "cross-env SKIP_PREFLIGHT_CHECK=true GENERATE_SOURCEMAP=false BROWSER=none react-app-rewired start",
     "test": "yarn cy:run:chrome && yarn cy:run:firefox",
+    "test:ci": "start-server-and-test start http://localhost:3000 test",
     "build": "cross-env SKIP_PREFLIGHT_CHECK=true GENERATE_SOURCEMAP=false react-app-rewired build",
     "eject": "react-scripts eject",
     "cy:open": "cypress open",
@@ -49,15 +50,16 @@
     "buffer": "^6.0.3",
     "cross-env": "^7.0.3",
     "crypto-browserify": "^3.12.0",
+    "cypress": "^12.6.0",
     "https-browserify": "^1.0.0",
     "os-browserify": "^0.3.0",
     "process": "^0.11.10",
     "react-app-rewired": "^2.2.1",
+    "start-server-and-test": "^1.15.4",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
     "typescript": "^4.9.4",
     "url": "^0.11.0",
-    "web-vitals": "^2.1.4",
-    "cypress": "^12.6.0"
+    "web-vitals": "^2.1.4"
   }
 }
