added exclude jest

--- a/tsconfig.package.json
+++ b/tsconfig.package.json
@@ -10,7 +10,9 @@
     "declarationDir": "/lib",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
-    "lib": ["ESNext"],
+    "lib": [
+      "ESNext"
+    ],
     "module": "CommonJS",
     "allowJs": true,
     "moduleResolution": "node",
@@ -26,5 +28,13 @@
     "target": "es5",
     "useUnknownInCatchVariables": false
   },
-  "exclude": ["node_modules", "**/node_modules/*", "**/*/lib", "**/*/lib.esm", "**/*/dist", "*.d.ts"]
+  "exclude": [
+    "node_modules",
+    "**/node_modules/*",
+    "**/*/lib",
+    "**/*/lib.esm",
+    "**/*/dist",
+    "*.d.ts",
+    "cypress"
+  ]
 }
