downgraded version of cypress

--- a/tsconfig.package.json
+++ b/tsconfig.package.json
@@ -10,9 +10,7 @@
     "declarationDir": "/lib",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
-    "lib": [
-      "ESNext"
-    ],
+    "lib": ["ESNext"],
     "module": "CommonJS",
     "allowJs": true,
     "moduleResolution": "node",
@@ -28,13 +26,5 @@
     "target": "es5",
     "useUnknownInCatchVariables": false
   },
-  "exclude": [
-    "node_modules",
-    "**/node_modules/*",
-    "**/*/lib",
-    "**/*/lib.esm",
-    "**/*/dist",
-    "*.d.ts",
-    "cypress"
-  ]
+  "exclude": ["node_modules", "**/node_modules/*", "**/*/lib", "**/*/lib.esm", "**/*/dist", "*.d.ts"]
 }
