--- a/demos/client-umd-e2e/package.json
+++ b/demos/client-umd-e2e/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "test": "start-server-and-test 'ts-node liveServer.ts' http-get://192.168.1.4:8080 'yarn cy:run:chrome & yarn cy:run:firefox'",
+    "test": "start-server-and-test 'ts-node liveServer.ts' http-get://localhost:8080 'yarn cy:run:chrome & yarn cy:run:firefox'",
     "cy:open": "cypress open",
     "cy:run:chrome": "cypress run --browser chrome",
     "cy:run:firefox": "cypress run --browser firefox"
