--- a/demos/react/package.json
+++ b/demos/react/package.json
@@ -15,7 +15,7 @@
   },
   "scripts": {
     "start": "cross-env SKIP_PREFLIGHT_CHECK=true GENERATE_SOURCEMAP=false BROWSER=none PORT=3000 react-app-rewired start",
-    "test": "start-server-and-test 'yarn start' http-get://192.168.1.4:3000 'yarn cy:run:chrome & yarn cy:run:firefox'",
+    "test": "start-server-and-test 'yarn start' http-get://localhost:3000 'yarn cy:run:chrome & yarn cy:run:firefox'",
     "build": "cross-env SKIP_PREFLIGHT_CHECK=true GENERATE_SOURCEMAP=false react-app-rewired build",
     "eject": "react-scripts eject",
     "cy:open": "cypress open",
