--- a/package.json
+++ b/package.json
@@ -37,16 +37,16 @@
     "typescript": "^4.9.4"
   },
   "scripts": {
-    "build": "yarn nx run-many --target=build --all",
+    "build": "yarn nx affected:build",
     "build:docs": "ts-node ./scripts/buildDocs",
     "gen:api-types": "yarn nx run-many --target=gen:api-types --all",
     "build:clean": "nx reset && yarn clean && yarn build",
     "dev": "yarn nx run-many --target=dev --all",
-    "lint": "yarn nx run-many --target=lint --all",
+    "lint": "yarn nx affected:lint",
     "clean": "yarn nx run-many --target=clean --all",
-    "test": "yarn nx run-many --target=test --all",
+    "test": "yarn nx affected:test",
     "test:watch": "yarn nx run-many --target=test:watch --all",
-    "test:coverage": "yarn nx run-many --target=test:coverage --all",
+    "test:coverage": "yarn nx affected:test:coverage",
     "test:demos": "yarn nx run-many --target=test --projects=react-demo,client-umd-e2e,demo-webpack-client",
     "format": "yarn prettier . \"**/*.+(js|ts|json)\" --write",
     "format:check": "yarn prettier . \"**/*.+(js|ts|json)\" --check",
